--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <main class="pb-[50px]">
       <section class="h-[100%] flex flex-col items-center gap-[30px]">
         <div
-          class="hidden-card bg-white rounded-[8px] px-[24px] pb-0 pt-[24px] flex flex-col w-[620px] gap-[32px]"
+          class="hidden-card card bg-white rounded-[8px] px-[24px] pb-0 pt-[24px] flex flex-col w-[620px] gap-[32px]"
         >
           <div class="flex justify-between items-center">
             <p class="text-[#9ACD32] text-[20px]">
               do you accept all major credit cards?
             </p>
             <button
-              class="qustion cursor-pointer outline-[#9ACD32] outline-3 rounded-[2px] w-[19px] h-[17px] text-[#9ACD32] text-[50px] flex justify-center items-center pb-[10px]"
+              class="qustion cursor-pointer outline-[#9ACD32] outline-3 rounded-[2px] w-[19px] h-[17px] text-[#9ACD32] text-[40px] flex justify-center items-center pb-[10px]"
             >
-              -
+              +
             </button>
           </div>
-          <div class="card text-[16px] text-gray-500 border-t-1 py-[32px]">
+          <div class="lorem0 text-[16px] text-gray-500 border-t-1 py-[32px]">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
               dolore illo dolores quia nemo doloribus quaerat, magni numquam
@@ -31,19 +31,19 @@
           </div>
         </div>
         <div
-          class="bg-white rounded-[8px] px-[24px] pb-0 pt-[24px] flex flex-col w-[620px] gap-[32px]"
+          class="hidden-card card bg-white rounded-[8px] px-[24px] pb-0 pt-[24px] flex flex-col w-[620px] gap-[32px]"
         >
           <div class="flex justify-between items-center">
             <p class="text-[#9ACD32] text-[20px]">
               do you suppport local farmers?
             </p>
             <button
-              class="qustion cursor-pointer outline-[#9ACD32] outline-3 rounded-[2px] w-[19px] h-[17px] text-[#9ACD32] text-[50px] flex justify-center items-center pb-[10px]"
+              class="qustion cursor-pointer outline-[#9ACD32] outline-3 rounded-[2px] w-[19px] h-[17px] text-[#9ACD32] text-[40px] flex justify-center items-center pb-[10px]"
             >
-              -
+              +
             </button>
           </div>
-          <div class="card text-[16px] text-gray-500 border-t-1 py-[32px]">
+          <div class="lorem0 text-[16px] text-gray-500 border-t-1 py-[32px]">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
               dolore illo dolores quia nemo doloribus quaerat, magni numquam
@@ -52,19 +52,19 @@
           </div>
         </div>
         <div
-          class="bg-white rounded-[8px] px-[24px] pb-0 pt-[24px] flex flex-col w-[620px] gap-[32px]"
+          class="hidden-card card bg-white rounded-[8px] px-[24px] pb-0 pt-[24px] flex flex-col w-[620px] gap-[32px]"
         >
           <div class="flex justify-between items-center">
             <p class="text-[#9ACD32] text-[20px]">
               do you use organic ingredients?
             </p>
             <button
-              class="qustion cursor-pointer outline-[#9ACD32] outline-3 rounded-[2px] w-[19px] h-[17px] text-[#9ACD32] text-[50px] flex justify-center items-center pb-[10px]"
+              class="qustion cursor-pointer outline-[#9ACD32] outline-3 rounded-[2px] w-[19px] h-[17px] text-[#9ACD32] text-[40px] flex justify-center items-center pb-[10px]"
             >
-              -
+              +
             </button>
           </div>
-          <div class="card text-[16px] text-gray-500 border-t-1 py-[32px]">
+          <div class="lorem0 text-[16px] text-gray-500 border-t-1 py-[32px]">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est
               dolore illo dolores quia nemo doloribus quaerat, magni numquam
